genson-cli/tests/snapshots/map_of_records__infer__avro_kv.snap
---
source: genson-cli/tests/map_of_records.rs
expression: stdout_str
info:
  approved: true
  args:
    - "--avro"
    - "--ndjson"
    - "--map-threshold"
    - "3"
    - "--map-encoding"
    - kv
    - "--root-map"
  input:
    - en:
        language: en
        value: Jack Bauer
      fr:
        language: fr
        value: Jack Bauer
    - en:
        language: en
        value: happiness
      fr:
        language: fr
        value: bonheur
      rn:
        language: rn
        value: Umunezero
---
{
  "type": "record",
  "name": "document",
  "namespace": "genson",
  "fields": [
    {
      "name": "document",
      "type": {
        "type": "map",
        "values": {
          "type": "record",
          "name": "document_extensions",
          "namespace": "genson",
          "fields": [
            {
              "name": "language",
              "type": "string"
            },
            {
              "name": "value",
              "type": "string"
            }
          ]
        },
        "name": "document"
      }
    }
  ]
}
