genson-cli/tests/snapshots/map_of_records__infer__avro_wrap.snap
---
source: genson-cli/tests/map_of_records.rs
expression: avro_str
---
{
  "type": "record",
  "name": "document",
  "namespace": "genson",
  "fields": [
    {
      "name": "document",
      "type": {
        "type": "map",
        "values": {
          "type": "record",
          "name": "document_extensions",
          "namespace": "genson",
          "fields": [
            {
              "name": "en",
              "type": {
                "type": "record",
                "name": "en",
                "namespace": "genson.document_extensions_types",
                "fields": [
                  {
                    "name": "language",
                    "type": "string"
                  },
                  {
                    "name": "value",
                    "type": "string"
                  }
                ]
              }
            },
            {
              "name": "fr",
              "type": {
                "type": "record",
                "name": "fr",
                "namespace": "genson.document_extensions_types",
                "fields": [
                  {
                    "name": "language",
                    "type": "string"
                  },
                  {
                    "name": "value",
                    "type": "string"
                  }
                ]
              }
            },
            {
              "name": "rn",
              "type": [
                "null",
                {
                  "type": "record",
                  "name": "rn",
                  "namespace": "genson.document_extensions_types",
                  "fields": [
                    {
                      "name": "language",
                      "type": "string"
                    },
                    {
                      "name": "value",
                      "type": "string"
                    }
                  ]
                }
              ]
            }
          ]
        },
        "name": "document"
      }
    }
  ]
}
