genson-cli/tests/snapshots/map_of_records__infer__jsonschema.snap
---
source: genson-cli/tests/map_of_records.rs
expression: stdout_str
info:
  approved: true
  args:
    - "--ndjson"
    - "--map-threshold"
    - "3"
    - "--root-map"
  input:
    - en:
        language: en
        value: Jack Bauer
      fr:
        language: fr
        value: Jack Bauer
    - en:
        language: en
        value: happiness
      fr:
        language: fr
        value: bonheur
      rn:
        language: rn
        value: Umunezero
---
{
  "$schema": "http://json-schema.org/schema#",
  "type": "object",
  "additionalProperties": {
    "properties": {
      "language": {
        "type": "string"
      },
      "value": {
        "type": "string"
      }
    },
    "required": [
      "language",
      "value"
    ],
    "type": "object"
  }
}
