genson-cli/tests/snapshots/map_of_records__infer__jsonschema_wrap.snap
---
source: genson-cli/tests/map_of_records.rs
expression: stdout_str
info:
  input:
    - en:
        language: en
        value: Jack Bauer
      fr:
        language: fr
        value: Jack Bauer
    - en:
        language: en
        value: happiness
      fr:
        language: fr
        value: bonheur
      rn:
        language: rn
        value: Umunezero
---
{
  "$schema": "http://json-schema.org/schema#",
  "type": "object",
  "additionalProperties": {
    "properties": {
      "en": {
        "properties": {
          "language": {
            "type": "string"
          },
          "value": {
            "type": "string"
          }
        },
        "required": [
          "language",
          "value"
        ],
        "type": "object"
      },
      "fr": {
        "properties": {
          "language": {
            "type": "string"
          },
          "value": {
            "type": "string"
          }
        },
        "required": [
          "language",
          "value"
        ],
        "type": "object"
      },
      "rn": {
        "properties": {
          "language": {
            "type": "string"
          },
          "value": {
            "type": "string"
          }
        },
        "required": [
          "language",
          "value"
        ],
        "type": "object"
      }
    },
    "required": [
      "en",
      "fr"
    ],
    "type": "object"
  }
}
