genson-cli/tests/snapshots/map_of_records__infer__jsonschema_wrap_kv.snap
---
source: genson-cli/tests/map_of_records.rs
expression: stdout_str
---
{
  "$schema": "http://json-schema.org/schema#",
  "properties": {
    "labels": {
      "properties": {
        "en": {
          "type": "object",
          "additionalProperties": {
            "type": "string"
          }
        },
        "fr": {
          "type": "object",
          "additionalProperties": {
            "type": "string"
          }
        },
        "rn": {
          "type": "object",
          "additionalProperties": {
            "type": "string"
          }
        }
      },
      "required": [
        "en",
        "fr"
      ],
      "type": "object"
    }
  },
  "required": [
    "labels"
  ],
  "type": "object"
}
